manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: myapp-prod
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
